# iotclima-backend

./: .pylintrc  README.md  djmode  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: command.txt  commands.md  schema.md  weather station.sql
docs/md/: commands.md
envs/: .env.example
http/: v1_auth.http  v1_default.http  v1_places.http  v1_sensors.http  v1_stations.http  v1_users.http
notebooks/: generate_places_data.ipynb
notebooks/data/: places_data.csv
scripts/: cli.py  module.py  utils.py
scripts/djmode/: README.md  main.py
scripts/djmode/cli/: commands.py
scripts/djmode/docs/: architecture.md
scripts/djmode/generators/infra/: actions_generator.py  database_generator.py  history_generator.py  modules_generator.py
scripts/djmode/generators/module/: base.py  routes_generator.py  tests_generator.py  views_generator.py
scripts/djmode/utilities/: inspections.py
src/django_app/: asgi.py  container.py  dashboard.py  routes.py  settings.py  test.py  urls.py
src/django_app/__shared/: config.py
src/django_app/management/commands/: seed_all.py
src/django_app/modules/v1/auth/: __init__.py  api.py  apps.py  models.py  serializers.py  urls.py
src/django_app/modules/v1/places/: __init__.py  admin.py  api.py  apps.py  container.py  filters.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
src/django_app/modules/v1/sensors/: __init__.py  admin.py  api.py  apps.py  container.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/django_app/modules/v1/stations/: __init__.py  admin.py  api.py  apps.py  container.py  filters.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
src/django_app/modules/v1/users/: __init__.py  admin.py  api.py  apps.py  container.py  filters.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
(+12 files in other folders)
